feat: Add guide